# herakoi

./: .gitignore  .readthedocs.yaml  HISTORY.md  LICENSE.md  README.md  herakoi.py  init.py  pyproject.toml  sonic.py
.github/workflows/: draft-pdf-paper.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  issues.rst  tutorials.rst
herakoi/: __init__.py  __main__.py  core.py  main.py
paper/: paper.bib  paper.md
