[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
known_third_party = ["numpy","time","re","sys","mediapipe","mediapipe-silicon"]

[project]
name = "herakoi"
version = "0.0.1"
authors = [
  { name="Michele Ginolfi", email="micheleginolfi@gmail.com" },
  { name="Luca Di Mascolo", email="lucadimascolo@gmail.com" },
]
description = "A sonification tool"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
dependencies = ["mido>=1.2","rtmidi>=1.4","cv2>=4.6"]

[project.urls]
"Homepage" = "https://github.com/lucadimascolo/herakoi"
"Bug Tracker" = "https://github.com/lucadimascolo/herakoi/issues"
