[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
known_third_party = ["mediapipe","mediapipe-silicon"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["herakoi*"]
exclude = ["images*"]

[project]
name = "herakoi"
version = "0.2.0"
authors = [
  { name="Michele Ginolfi", email="micheleginolfi@gmail.com" },
  { name="Luca Di Mascolo", email="lucadimascolo@gmail.com" },
]
description = "A sonification tool"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
dependencies = ["mido>=1.2","python-rtmidi==1.4.9","opencv-python>=4.6","numpy>=1.23","pynput>=1.7",
                'mediapipe; platform_system != "Darwin" or  platform_machine != "arm64"',
        'mediapipe-silicon; platform_system == "Darwin" and platform_machine == "arm64"']

[project.urls]
"Homepage" = "https://github.com/lucadimascolo/herakoi"
"Bug Tracker" = "https://github.com/lucadimascolo/herakoi/issues"

[project.scripts]
herakoi = "herakoi:basic"